src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__vep_disagreement_cases_output.snap
---
source: src/annotate/seqvars/csq.rs
expression: snapshot_data
snapshot_kind: text
---
"10:103089678:103089681:TTCC:T": "T|stop_gained&disruptive_inframe_deletion|HIGH|NT5C2|HGNC:8022|transcript|ENST00000404739.8|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|19/19|g.103089679_103089681del|n.1882_1884del|c.1677_1679del|p.Glu561Ter|1882/3525|1677/1686|561/562|0|-1|"
"10:103089678:103089684:TTCCTCC:T": "T|stop_gained&disruptive_inframe_deletion|HIGH|NT5C2|HGNC:8022|transcript|ENST00000404739.8|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|19/19|g.103089679_103089684del|n.1879_1884del|c.1674_1679del|p.Glu560Ter|1879/3525|1674/1686|560/562|0|-1|"
"10:103089690:103089696:CTCCTCT:C": "C|stop_gained&disruptive_inframe_deletion|HIGH|NT5C2|HGNC:8022|transcript|ENST00000404739.8|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|19/19|g.103089691_103089696del|n.1867_1872del|c.1662_1667del|p.Glu560Ter|1867/3525|1662/1686|560/562|0|-1|"
"10:103089693:103089696:CTCT:C": "C|stop_gained&disruptive_inframe_deletion|HIGH|NT5C2|HGNC:8022|transcript|ENST00000404739.8|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|19/19|g.103089694_103089696del|n.1867_1869del|c.1662_1664del|p.Glu561Ter|1867/3525|1662/1686|561/562|0|-1|"
"11:125900260:125900263:CCTT:C": "C|stop_gained&disruptive_inframe_deletion|HIGH|HYLS1|HGNC:26558|transcript|ENST00000425380.7|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|3/3|g.125900261_125900263del|n.1069_1071del|c.896_898del|p.Ser299Ter|1069/1451|896/900|299/300|0|1|"
"11:17494365:17494368:CAGA:C": "C|disruptive_inframe_deletion|MODERATE|USH1C|HGNC:12597|transcript|ENST00000005226.12|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|27/27|g.17494366_17494368del|n.2773_2775del|c.2664_2666del|p.Leu889del|2773/3241|2664/2700|889/900|0|-1|"
"11:532637:532640:CAGG:C": "C|stop_gained&disruptive_inframe_deletion|HIGH|HRAS|HGNC:5173|transcript|ENST00000311189.8|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|5/6|g.532638_532640del|n.780_782del|c.566_568del|p.Ser189Ter|780/1070|566/570|189/190|0|-1|"
"11:612604:612650:TGGGCTGCTCCAGCTTTCTGGAGTTCTCATTAGACTGGGTTCTAGGC:T": "T|missense_variant&3_prime_UTR_exon_variant|MODERATE|IRF7|HGNC:6122|transcript|ENST00000525445.6|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|11/11|g.612605_612650del|n.1828_1873del|c.1507_*40del|p.Ala503ThrfsTer2|1828/1923|1507/1512|503/504|0|-1|"
"12:52076795:52076795:C:T": "T|missense_variant|MODERATE|ATG101|HGNC:25679|transcript|ENST00000336854.9|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|4/4|g.52076795C>T|n.733C>T|c.262C>T|p.Arg88Cys|733/1433|262/657|88/219|0|1|"
"12:52076825:52076825:A:G": "G|missense_variant|MODERATE|ATG101|HGNC:25679|transcript|ENST00000336854.9|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|4/4|g.52076825A>G|n.763A>G|c.292A>G|p.Met98Val|763/1433|292/657|98/219|0|1|"
"12:52076859:52076859:G:A": "A|missense_variant|MODERATE|ATG101|HGNC:25679|transcript|ENST00000336854.9|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|4/4|g.52076859G>A|n.797G>A|c.326G>A|p.Arg109His|797/1433|326/657|109/219|0|1|"
"12:52076870:52076870:T:G": "G|missense_variant|MODERATE|ATG101|HGNC:25679|transcript|ENST00000336854.9|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|4/4|g.52076870T>G|n.808T>G|c.337T>G|p.Ser113Ala|808/1433|337/657|113/219|0|1|"
"12:52076931:52076931:C:T": "T|missense_variant|MODERATE|ATG101|HGNC:25679|transcript|ENST00000336854.9|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|4/4|g.52076931C>T|n.869C>T|c.398C>T|p.Thr133Met|869/1433|398/657|133/219|0|1|"
"12:52076990:52076990:A:G": "G|missense_variant|MODERATE|ATG101|HGNC:25679|transcript|ENST00000336854.9|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|4/4|g.52076990A>G|n.928A>G|c.457A>G|p.Ile153Val|928/1433|457/657|153/219|0|1|"
"12:52077033:52077033:A:G": "G|missense_variant|MODERATE|ATG101|HGNC:25679|transcript|ENST00000336854.9|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|4/4|g.52077033A>G|n.971A>G|c.500A>G|p.Lys167Arg|971/1433|500/657|167/219|0|1|"
"12:52077081:52077081:G:A": "A|missense_variant|MODERATE|ATG101|HGNC:25679|transcript|ENST00000336854.9|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|4/4|g.52077081G>A|n.1019G>A|c.548G>A|p.Arg183Gln|1019/1433|548/657|183/219|0|1|"
"12:52077158:52077158:C:T": "T|missense_variant|MODERATE|ATG101|HGNC:25679|transcript|ENST00000336854.9|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|4/4|g.52077158C>T|n.1096C>T|c.625C>T|p.Arg209Cys|1096/1433|625/657|209/219|0|1|"
"13:32316456:32316457:TA:T": "T|5_prime_UTR_exon_variant|MODIFIER|BRCA2|HGNC:1101|transcript|ENST00000380152.8|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|2/27|g.32316457del|n.199del|c.-1del|p.?|199/11954|-1/10257||0|1|"
"15:98957435:98957438:CCTG:C": "C|stop_gained&disruptive_inframe_deletion|HIGH|IGF1R|HGNC:5465|transcript|ENST00000650285.1|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|21/21|g.98957436_98957438del|n.5144_5146del|c.4101_4103del|p.Cys1367Ter|5144/12235|4101/4104|1367/1368|0|1|"
"16:29805302:29805305:GCCT:G": "G|stop_gained&disruptive_inframe_deletion|HIGH|KIF22|HGNC:6391|transcript|ENST00000160827.9|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|14/14|g.29805303_29805305del|n.2003_2005del|c.1994_1996del|p.Ser665Ter|2003/2081|1994/1998|665/666|0|1|"
"16:68833498:68833499:AG:A": "A|stop_retained_variant|LOW|CDH1|HGNC:1748|transcript|ENST00000261769.10|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|16/16|g.68833499del|n.2773del|c.2649del|p.Ter883=|2773/4811|2649/2649|883/883|0|1|"
"16:8847818:8847821:TCTC:T": "T|stop_gained&disruptive_inframe_deletion|HIGH|PMM2|HGNC:9115|transcript|ENST00000268261.9|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|8/8|g.8847819_8847821del|n.781_783del|c.737_739del|p.Ser246Ter|781/2285|737/741|246/247|0|1|"
"17:39666107:39666109:TGA:T": "T|stop_retained_variant|LOW|TCAP|HGNC:11610|transcript|ENST00000309889.3|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|2/2|g.39666108_39666109del|n.514_515del|c.503_504del|p.Ter168=|514/960|503/504|168/168|0|1|"
"17:42911419:42911422:CGTT:C": "C|stop_gained&disruptive_inframe_deletion|HIGH|G6PC1|HGNC:4056|transcript|ENST00000253801.7|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|5/5|g.42911420_42911422del|n.1148_1150del|c.1070_1072del|p.Leu357Ter|1148/4164|1070/1074|357/358|0|1|"
"17:58734215:58734218:AATT:A": "A|stop_gained&disruptive_inframe_deletion|HIGH|RAD51C|HGNC:9820|transcript|ENST00000337432.9|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|9/9|g.58734216_58734218del|n.1169_1171del|c.1127_1129del|p.Leu376Ter|1169/2562|1127/1131|376/377|0|1|"
"17:60150033:60150039:AGATGCG:A": "A|start_lost&5_prime_UTR_exon_variant|HIGH|CA4|HGNC:1375|transcript|ENST00000300900.9|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|1/8|g.60150034_60150039del|n.62_67del|c.-1_5del|p.Met1?|62/1123|-1/939||0|1|"
"1:160201358:160201364:CGATGAT:C": "C|stop_gained&disruptive_inframe_deletion|HIGH|CASQ1|HGNC:1512|transcript|ENST00000368078.8|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|11/11|g.160201359_160201364del|n.1359_1364del|c.1182_1187del|p.Asp395Ter|1359/1878|1182/1191|395/397|0|1|"
"1:160201358:160201367:CGATGATGAT:C": "C|stop_gained&disruptive_inframe_deletion|HIGH|CASQ1|HGNC:1512|transcript|ENST00000368078.8|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|11/11|g.160201359_160201367del|n.1356_1364del|c.1179_1187del|p.Asp394Ter|1356/1878|1179/1191|394/397|0|1|"
"1:21577646:21577647:TG:T": "T|stop_retained_variant|LOW|ALPL|HGNC:438|transcript|ENST00000374840.8|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|12/12|g.21577647del|n.1773del|c.1574del|p.Ter525=|1773/2536|1574/1575|525/525|0|1|"
"1:75762761:75762762:TA:T": "T|stop_retained_variant|LOW|ACADM|HGNC:89|transcript|ENST00000370841.9|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|12/12|g.75762762del|n.1345del|c.1266del|p.Ter422=|1345/2261|1266/1266|422/422|0|1|"
"20:32437334:32437337:GATA:G": "G|conservative_inframe_deletion&stop_retained_variant|MODERATE|ASXL1|HGNC:18318|transcript|ENST00000375687.10|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|13/13|g.32437335_32437337del|n.5069_5071del|c.4624_4626del|p.Ter1542=|5069/7052|4624/4626|1542/1542|0|1|"
"20:44619834:44619835:TC:T": "T|stop_retained_variant|LOW|ADA|HGNC:186|transcript|ENST00000372874.9|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|12/12|g.44619835del|n.1183del|c.1091del|p.Ter364=|1183/1496|1091/1092|364/364|0|-1|"
"20:64032986:64032989:CCTT:C": "C|stop_gained&disruptive_inframe_deletion|HIGH|PRPF6|HGNC:15860|transcript|ENST00000266079.5|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|21/21|g.64032987_64032989del|n.2936_2938del|c.2822_2824del|p.Phe941Ter|2936/3047|2822/2826|941/942|0|1|"
"22:41528603:41528609:TGCAACA:T": "T|stop_gained&conservative_inframe_deletion|HIGH|ACO2|HGNC:118|transcript|ENST00000216254.9|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|18/18|g.41528604_41528609del|n.2365_2370del|c.2335_2340del|p.Gln779Ter|2365/2734|2335/2343|779/781|0|1|"
"2:190970700:190970707:GCTCTATA:G": "G|missense_variant&3_prime_UTR_exon_variant|MODERATE|STAT1|HGNC:11362|transcript|ENST00000361099.8|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|25/25|g.190970701_190970707del|n.2558_2564del|c.2249_*2del|p.Val750AlafsTer2|2558/4116|2249/2253|750/751|0|-1|"
"2:47482948:47482949:GA:G": "G|stop_retained_variant|LOW|MSH2|HGNC:7325|transcript|ENST00000233146.7|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|16/16|g.47482949del|n.2841del|c.2805del|p.Ter935=|2841/3115|2805/2805|935/935|0|1|"
"2:47806858:47806859:TA:T": "T|stop_retained_variant|LOW|MSH6|HGNC:7329|transcript|ENST00000234420.11|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|10/10|g.47806859del|n.4171del|c.4082del|p.Ter1361=|4171/4265|4082/4083|1361/1361|0|1|"
"3:123614108:123614111:CTCT:C": "C|stop_gained&disruptive_inframe_deletion|HIGH|MYLK|HGNC:7590|transcript|ENST00000360304.8|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|34/34|g.123614109_123614111del|n.6051_6053del|c.5739_5741del|p.Glu1914Ter|6051/10113|5739/5745|1914/1915|0|-1|"
"3:14141793:14141794:TG:T": "T|stop_retained_variant|LOW|TMEM43|HGNC:28472|transcript|ENST00000306077.5|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|12/12|g.14141794del|n.1344del|c.1202del|p.Ter401=|1344/3230|1202/1203|401/401|0|1|"
"3:169764740:169767716:GGCTGACAGAGCCCAACTCTTCGCGGTGGCAGTGGGTGCCTCCGGAGAAGCCCCGGGCCGACCGCGGCCTCCAGGCGGGGTTCGGGGGCTGGGCAGGCGACCCGCCGCAGGTCCCCGGGAGGGGCGAACGGGCCAGCAGCTGACATTTTTTGTTTGCTCTAGAATGAACGGTGGAAGGCGGCAGGCCGAGGCTTTTCCGCCCGCTGAAAGTCAGCGAGAAAAACAGCGCGCGGGGAGCAAAAGCACGGCGCCTACGCCCTTCTCAGTTAGGGTTAGACAAAAAATGGCCACCACCCCTCCCAGGCCCACCCTCCGCAACCCGGTGCGCTGCCGGGCGAGTCGGCTTATAAAGGGAGCGGCCGCCGACCGCACGGATTGGCCAAGCTGACTCTCGCGGCTCTCGTGAGAGTCACTCTCTCGGGCGGGCTGGTTGGGGGGAACGGGAAATTAAAGTTCCATTTCCGGCCATGAGGAAGGACGTTGCCCTTCCGCACGTCCGGGAAAGGCTTTGCGTCTTTACTTCCGACCTTCTTTAAAGGTGAAACTAACTTGAGGTATCAGAGGGCCTTTTTTCTATCCTCTGCAGACCAGACGCGGTTCACCTCGACTACCTTAAAAATGGAATTCACAGGAAGATTTTAGGGCCTAAGACACAGAACACTAATTCCTAGTTTTGATCATCACATTTTTTGGAGAACTTTGTGAAAATAGATTCCCAGGCAGCACTGACTACAGCAGAATCTTGTCTCGGCTCAGTGGGATGCGTCCGAGTTCCTACCCTGCCCCCTTCTCCTTAGAATGCCTTCTCCAGCCTCTCCTTGAGCAGAGGATGGCTTTAATCAAGTGTAACTACTACATTATTAATCTTAAGGACTGAATCTCCCTTTTATTAGGAAAGAAAGGCGTTTCAATCATTGACTTTGCTTTAAAGTAGTGCTGTGTCTTGATGAGGTAAAAAGAGGGGAGTAATCCACCATAAATTGTAACGATTTTTTTTTTTGAGACGGAGTCTTGCTCTTTCGCCCAGGCTGGATGGAGTCTAGTGGCGTGATCTCGGCTCACTGCAACCTCTGCCTCCCGGGTTCAAGCGATTCTCGTGTCTCAGCCTCCTGAGTAGCTGGGATTACAGGCGCCTGCCACCACGCCCAGCTAGTTTTTGTGTTTTTAGTAGAGACGGGGGTTTCACCATGTTGCCCAGGCTGGTCTCGAACGCCAGGGCTCAAGTGATCCACCCGCTTCGGCCTCCCAAAGTGCTGGGATTACAGGTATGAGCCACCGCACCCGGCCGCGAATTTTTATAATGGCCAGTATAGTGCAGTTTTACATATAAATGACAGGATGATCTTAAAAGTTTTACTCGTATTCAGTTAGATAAACTCCGTGGAGTTGTCGCTGTCGGTCCTCGATCTGAAAGAAAAGTAAAATATCTCCCTCTCCATCTCTCTCCCTCCTTCTCTCTCTCCCATCCCCTTTTTCTTTCATAGCATCTGCCAGGTTGTAAAGTTTTTTACGGACAGAATCTGACTCCTGTTTTTAGCACTATTGCACTTAGCACAGTACCTTACATAGAGTAGATGCTAAATGCTTTGAGTTATATGTCAACACTACCACCATTCTCTTAGCATCCCACATTATCTCAAACCCTTCTTTCCCCTTCATATCTAAGTAGGCACTAAATCTTGTCAGTTTTCATAATTTCTTTTTTTAAATTCCTATTGCTTATAATCTTGAGTACAAGACTTGGCACTTTATATGTGGACTAGTAACTTTCTAACTGATCACCAAATCTCCAGGGCCTTCCTCATTCAATTTATTCTCCAAACTATCACATTCATCATAACATAGTTTCCTTATGGCTCCTGCTTTTAAATCTTTAATTTCTCTCCTTTGCATATTGGATATTTAGCACTTTAAGCCTTTCAGTCCCTGGCCTTCACTTAACCTTGCTAGTCATAGCGCTTGTTCTGCTCTATATGAGCTCTTGACTTGAACAAAATCAGTCTAAACTTAGGCGTGGTGGTGCATACCTGTGGATTCAGTTACTTGGGAGGCTGAGGGCAGAGCCCAGGAGTTGGAGGCTGCAGTGAGCTATGATTGCACTACTGCACTCCAGCCTGGGACACAGGGCAAGACTCTGCCTCTAAAACTAAATAAATGAATAAATACATACATAAACAAAAATTTTAAAAACAAAATCAGTCTATTAAACATGCCCTGAATATGCTTTGTTCATTCTCATCTTTAGCAACTTGTTCATTTTAGTATGCTTGCCTGGATATCTGCGCTCCATCCCAATGCCACCCCTTCCATGATGGCATACCTCTGCTATGGAGTCTCGTTCCTCACCACAGCAACCTTCTTTCCCTAAACTTCAATAAGCTTAAATCTTATCACTCATTTGGCACATAGCATATTGTACCACAAATGCTCTCTTCCAAGGGAAATATAAGCTCACCAACGTCAAGTTATAGAAGAAACACTATGGGAAACATTATTTTAACTTGGTTCTACTCAATAGACATCTGTTCTTGAGCTTCACCATTATTATCCCCCAAACCCATTATAGAAATACAACAGAAATATTGGCATCCCAATAGGTGAAGTATTTTCTCTTCTCCCAGAAACATATAATATCCAAAGTTTTCTGTCACATATACTCAAAACATTTTCTTCCAACCATTTTATCTGTATTTCAGAAGCATCTTTGGTGTACTATGTTGGGTCCAACTTCTTTAAATTCTGCAGCAGTGATCCACATGTCCTGGAAGGCAGACAAGGATGCAAGAATAGAACCTCCCATCCACACTGATATTTTCCTTTCTGGAGGAGCTATAACTTGCACAGCGGTGTTGGCAGGAGCCACCTTTGCTATATCCTTAACTAACCGCTTGTCTAAACCAGGGAAAGAGGTTGATCCCCCGGCAAGGATAATATTGGAAAAGAAGGAATTCCTCAGGCCTGTATCACATTTCATTAT:G": "G|frameshift_variant&frameshift_truncation&3_prime_UTR_exon_variant|HIGH|ACTRT3|HGNC:24022|transcript|ENST00000330368.3|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|2/2|g.169764741_169767716del|n.876_3851del|c.835_*2691del|p.Ile279fsTer?|876/1671|835/1119|279/373|0|-1|"
"3:3148152:3148153:TA:T": "T|stop_retained_variant|LOW|TRNT1|HGNC:17341|transcript|ENST00000251607.11|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|8/8|g.3148153del|n.1383del|c.1305del|p.Ter435=|1383/2252|1305/1305|435/435|0|1|"
"3:32165908:32165909:TA:T": "T|stop_retained_variant|LOW|GPD1L|HGNC:28956|transcript|ENST00000282541.10|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|8/8|g.32165909del|n.1148del|c.1056del|p.Ter352=|1148/3947|1056/1056|352/352|0|1|"
"3:51385326:51385335:GGAGGAGGAT:G": "G|5_prime_UTR_exon_variant|MODIFIER|MANF|HGNC:15461|transcript|ENST00000528157.7|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|1/4|g.51385327_51385335del|n.44_52del|c.-9_-1del|p.?|44/909|-9/549||0|1|"
"3:53495165:53495168:GGAT:G": "G|start_lost&5_prime_UTR_exon_variant|HIGH|CACNA1D|HGNC:1391|transcript|ENST00000350061.11|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|1/48|g.53495166_53495168del|n.556_558del|c.-1_2del|p.Met1?|556/9369|-1/6486||0|1|"
"3:53495165:53495174:GGATGATGAT:G": "G|start_lost&5_prime_UTR_exon_variant|HIGH|CACNA1D|HGNC:1391|transcript|ENST00000350061.11|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|1/48|g.53495166_53495174del|n.556_564del|c.-1_8del|p.Met1?|556/9369|-1/6486||0|1|"
"3:53495165:53495177:GGATGATGATGAT:G": "G|start_lost&5_prime_UTR_exon_variant|HIGH|CACNA1D|HGNC:1391|transcript|ENST00000350061.11|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|1/48|g.53495166_53495177del|n.556_567del|c.-1_11del|p.Met1?|556/9369|-1/6486||0|1|"
"4:112657326:112657327:GA:G": "G|stop_retained_variant|LOW|LARP7|HGNC:24912|transcript|ENST00000344442.10|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|13/13|g.112657327del|n.1848del|c.1749del|p.Ter583=|1848/2107|1749/1749|583/583|0|1|"
"4:186288613:186288614:GA:G": "G|stop_retained_variant|LOW|F11|HGNC:3529|transcript|ENST00000403665.7|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|15/15|g.186288614del|n.1986del|c.1878del|p.Ter626=|1986/3053|1878/1878|626/626|0|1|"
"4:6302457:6302460:TCGG:T": "T|stop_gained&disruptive_inframe_deletion|HIGH|WFS1|HGNC:12762|transcript|ENST00000226760.5|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|8/8|g.6302458_6302460del|n.2837_2839del|c.2667_2669del|p.Ala890Ter|2837/3640|2667/2673|890/891|0|1|"
"5:68297600:68297601:GA:G": "G|stop_retained_variant|LOW|PIK3R1|HGNC:8979|transcript|ENST00000521381.6|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|16/16|g.68297601del|n.2755del|c.2175del|p.Ter725=|2755/6975|2175/2175|725/725|0|1|"
"7:6023684:6023698:TTAAGTGAATTGCCG:T": "T|missense_variant&3_prime_UTR_exon_variant|MODERATE|AIMP2|HGNC:20609|transcript|ENST00000223029.8|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|4/4|g.6023685_6023698del|n.1049_1062del|c.957_*7del|p.Lys320AsnfsTer2|1049/1198|957/963|320/321|0|1|"
"7:66639222:66639225:CATG:C": "C|stop_gained&disruptive_inframe_deletion|HIGH|KCTD7|HGNC:21957|transcript|ENST00000639828.2|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|4/4|g.66639223_66639225del|n.1045_1047del|c.861_863del|p.Trp289Ter|1045/4869|861/870|289/290|0|1|"
"7:93101327:93101329:CTT:C": "C|stop_retained_variant|LOW|SAMD9|HGNC:1348|transcript|ENST00000379958.3|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|3/3|g.93101328_93101329del|n.4995_4996del|c.4769_4770del|p.Ter1590=|4995/6806|4769/4770|1590/1590|0|-1|"
"8:89935588:89935591:TCTC:T": "T|stop_gained&disruptive_inframe_deletion|HIGH|NBN|HGNC:7652|transcript|ENST00000265433.8|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|16/16|g.89935589_89935591del|n.2362_2364del|c.2256_2258del|p.Arg754Ter|2362/4622|2256/2265|754/755|0|-1|"
"9:127690855:127690856:TA:T": "T|stop_retained_variant|LOW|STXBP1|HGNC:11444|transcript|ENST00000373299.5|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|19/19|g.127690856del|n.1912del|c.1785del|p.Ter595=|1912/3754|1785/1785|595/595|0|1|"
"X:101397801:101397813:TAAACATTTTAAA:T": "T|stop_lost&protein_altering_variant&3_prime_UTR_exon_variant|HIGH|GLA|HGNC:4296|transcript|ENST00000218516.4|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|7/7|g.101397802_101397813del|n.1308_1319del|c.1286_*7del|p.Leu429_Ter430delinsGln|1308/1318|1286/1290|429/430|0|-1|"
"X:13735072:13735073:AT:A": "A|start_lost|HIGH|OFD1|HGNC:2567|transcript|ENST00000340096.11|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|1/23|g.13735073del|n.326del|c.2del|p.Met1?|326/3612|2/3039||0|1|"
"X:150671593:150671594:TG:T": "T|stop_retained_variant|LOW|MTM1|HGNC:7448|transcript|ENST00000370396.7|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|15/15|g.150671594del|n.1863del|c.1811del|p.Ter604=|1863/3412|1811/1812|604/604|0|1|"
"X:154030369:154030669:AGCTAACTCTCTCGGTCACGGGCGTCCGGCTGTCCACAGGCTCCTCTCTGTTTGGCCTTGGCATGGAGGATGAAACAATGTCTTTGCGCTCTCCCTCCCCTCGGTGTTTGTACTTTTCTGCGGCCGTGGCGGCGGTGGCAACCGCGGGCTGAGTCTTAGCTGGCTCCTTGGGGCAGCCGTCGCTCTCCAGTGAGCCTCCTCTGGGCATCTTCTCCTCTTTGCAGACGCTGCTGCTCAAGTCCTGGGGCTCAGGGGGGCTGGTGGGGTCCTCGGAGCTCTCGGGCTCAGGTGGAGGTGGGGG:A": "A|stop_gained&conservative_inframe_deletion|HIGH|MECP2|HGNC:6990|transcript|ENST00000453960.7|Coding|Basic&EnsemblCanonical&ManeSelect&GencodePrimary|3/3|g.154030370_154030669del|n.1247_1546del|c.1195_1494del|p.Pro399Ter|1247/10343|1195/1497|399/499|0|-1|"
